--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -115,7 +115,7 @@
                         <!-- HEADER CART : end -->
 
                         <!-- HEADER SEARCH : begin -->
-                        <div class="header-search">
+                        {# <div class="header-search">
                             <div class="header-search-inner">
                                 <form class="search-form" action="http://demos.volovar.net/beautyspot.html/demo/search-results.html">
                                     <i class="search-ico fa fa-search"></i>
@@ -125,7 +125,7 @@
                                 </form>
                             </div>
                             <button class="search-toggle-mobile" type="button"><i class="fa"></i></button>
-                        </div>
+                        </div> #}
                         <!-- HEADER SEARCH : end -->
 
                     </div>
