--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/index.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/index.html.twig
@@ -13,7 +13,7 @@
             <div class="slide-inner">
               <div class="slide-content various-content textalign-right valign-middle">
 
-                <h1>Bienvenue<br>sur Nadine Coiffure!</h1>
+                <h1 style="color: #FFCC00">Bienvenue<br>sur Nadine Coiffure!</h1>
                 <h3>Salon de coiffure,<br>Hamman, Salon de beauté</h3>
 
               </div>
